# nlp-tools

./: CMakeLists.txt  README.md
modules/post/: CMakeLists.txt
modules/post/include/post/: Corpus.hh  Model.hh  Predictor.hh  Trainer.hh  common.hh  crf.hh  strdic.hh
modules/post/source/: Corpus.cc  Feature.hh  Predictor.cc  StringBag.hh  crf.cc  crfpos.cc  lookahead.cc  tokenize.cc
tools/evaluate/: CMakeLists.txt
tools/evaluate/source/: eval.cc
tools/predict/: CMakeLists.txt
tools/predict/source/: main.cc
tools/train/: CMakeLists.txt
tools/train/source/: main.cc
